<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F20B0B"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/annie_use_your_telescope"
            android:padding="@dimen/namePadding"
            android:text="@string/name"
            android:textColor="#3E2723"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEnterHobbies"
            style="@style/textCommonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_hobbies"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/btDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button" />

        <TextView
            android:id="@+id/textHobbies"
            style="@style/textCommonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/null_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView3"
                style="@style/textCommonStyle"
                android:layout_margin="4dp"
                android:lineSpacingMultiplier="2"
                android:padding="8dp"
                android:text="@string/my_bio"
                android:textSize="16sp" />
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
